# ncrypt

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fragment_ncrypt  fragment_ncrypt.cpp  key  key.x  ncrypt  ncrypt.cpp  ncrypt.in  ncrypt_public  ncrypt_public.cpp  public_ncrypt  public_ncrypt.cpp
lib/include/: chat_message.hpp  fragment_ncrypt.hpp  grid_ncrypt.hpp  public_ncrypt.hpp
lib/src/: chat_message.cc  fragment_ncrypt.cc  grid_ncrypt.cc  public_ncrypt.cc
src/: client.cxx  fragment_ncrypt.cxx  grid_ncrypt.cxx  public_ncrypt.cxx  server.cxx
